--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@200;400;500&display=swap');
 
 *{
+    margin: 0px;
+    padding: 0px;
     font-family: 'Inter', sans-serif;
+    max-width: 1440px;
 
 }
